<resources>
    <string name="app_name">Water Monitoring</string>

    <!-- LoginActivity -->
    <string name="login_activity">Login</string>
    <string name="logo">Logo</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Home -->
    <string name="main_activity">Water Monitoring</string>
    <string name="ph_text">pH level:\u0020</string>
    <string name="orp_text">ORP level:\u0020</string>
    <string name="turbidity_text">Turbidity level:\u0020</string>
    <string name="temperature_text">Temperature level:\u0020</string>
    <string name="connecting_to_server">connecting to server...</string>
    <string name="connection_lost">connection lost</string>
    <string name="waiting_for_data">connected! waiting for data...</string>
    <string name="failed_to_connect">failed to connect to server</string>
    <string name="pH">pH</string>
    <string name="orp">ORP</string>
    <string name="turbidity">turbidity</string>
    <string name="temperature">temperature</string>
    <string name="no_data">There is no data</string>
    <!-- WaterChartHelper -->
    <string name="chart_title">Water Quality Parameters</string>
    <string name="chart_y_title">Level</string>
    <string name="chart_series1_name">pH</string>
    <string name="chart_series2_name">ORP</string>
    <string name="chart_series3_name">Turbidity</string>
</resources>
